--- a/MLChallenge/Resources/Base.lproj/Main.storyboard
+++ b/MLChallenge/Resources/Base.lproj/Main.storyboard
@@ -24,7 +24,7 @@
                                 <state key="normal" title="OK"/>
                                 <connections>
                                     <action selector="okButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="x4t-ts-ikc"/>
-                                    <segue destination="md0-4W-fzY" kind="show" id="XFr-uW-v4R"/>
+                                    <segue destination="md0-4W-fzY" kind="show" id="T5V-lE-maf"/>
                                 </connections>
                             </button>
                             <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Monto" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jlb-mH-hi9">
@@ -59,15 +59,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T5P-XY-vhC">
-                                <rect key="frame" x="329" y="20" width="30" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="OK"/>
-                                <connections>
-                                    <action selector="okButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="9cL-IV-IT6"/>
-                                    <segue destination="LFT-4A-nnp" kind="show" id="1Bm-wS-Uwi"/>
-                                </connections>
-                            </button>
                             <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="hhd-yF-XGF">
                                 <rect key="frame" x="55" y="77" width="264" height="50"/>
                                 <subviews>
@@ -116,10 +107,18 @@
                                 <rect key="frame" x="0.0" y="323" width="375" height="20"/>
                                 <color key="color" red="0.46202266219999999" green="0.83828371759999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </activityIndicatorView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="abR-Oc-0fw">
+                                <rect key="frame" x="321" y="13" width="30" height="30"/>
+                                <state key="normal" title="OK"/>
+                                <connections>
+                                    <segue destination="LFT-4A-nnp" kind="show" identifier="toBankVC" id="Xnp-VF-ISC"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.93725490199999995" green="0.90196078430000004" blue="0.90196078430000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="1MW-Hv-ll9" firstAttribute="trailing" secondItem="hhd-yF-XGF" secondAttribute="trailing" constant="56" id="0h5-yF-nZj"/>
+                            <constraint firstItem="abR-Oc-0fw" firstAttribute="top" secondItem="DEx-TY-Glf" secondAttribute="top" constant="13" id="3im-oT-x9O"/>
                             <constraint firstItem="1MW-Hv-ll9" firstAttribute="trailing" secondItem="lqr-Rr-iSF" secondAttribute="trailing" constant="120" id="3pd-yT-LF9"/>
                             <constraint firstItem="sMm-JC-e5L" firstAttribute="trailing" secondItem="1MW-Hv-ll9" secondAttribute="trailing" id="GGL-jc-tfA"/>
                             <constraint firstItem="hhd-yF-XGF" firstAttribute="top" secondItem="1MW-Hv-ll9" secondAttribute="top" constant="57" id="THT-DY-mIf"/>
@@ -127,6 +126,7 @@
                             <constraint firstItem="sMm-JC-e5L" firstAttribute="leading" secondItem="1MW-Hv-ll9" secondAttribute="leading" id="WbF-Bt-ala"/>
                             <constraint firstItem="1MW-Hv-ll9" firstAttribute="bottom" secondItem="sMm-JC-e5L" secondAttribute="bottom" constant="324" id="WlS-et-fex"/>
                             <constraint firstItem="lqr-Rr-iSF" firstAttribute="top" secondItem="1MW-Hv-ll9" secondAttribute="top" constant="150.5" id="lXq-M8-b2m"/>
+                            <constraint firstItem="1MW-Hv-ll9" firstAttribute="trailing" secondItem="abR-Oc-0fw" secondAttribute="trailing" constant="24" id="pNK-Gu-ZGJ"/>
                             <constraint firstItem="hhd-yF-XGF" firstAttribute="leading" secondItem="1MW-Hv-ll9" secondAttribute="leading" constant="55" id="yFd-ld-T63"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="1MW-Hv-ll9"/>
@@ -136,18 +136,18 @@
                         <outlet property="amountLabel" destination="LXf-kP-JVP" id="Uua-UK-uCI"/>
                         <outlet property="creditCardLabel" destination="lqr-Rr-iSF" id="DO0-E7-MC7"/>
                         <outlet property="creditCardsTableView" destination="s8d-ub-TX2" id="Leo-1h-5ct"/>
-                        <outlet property="okButton" destination="T5P-XY-vhC" id="y1m-cu-A3U"/>
+                        <outlet property="okButton" destination="abR-Oc-0fw" id="Pgk-E0-CLe"/>
                         <outlet property="userAmountLabel" destination="GlO-Ux-SwQ" id="5DV-Zg-t4P"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QzX-G1-8kw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="812" y="133.5832083958021"/>
+            <point key="canvasLocation" x="873" y="179"/>
         </scene>
         <!--Bank View Controller-->
         <scene sceneID="GZD-sh-Iw3">
             <objects>
-                <viewController id="LFT-4A-nnp" customClass="BankViewController" customModule="MLChallenge" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="BankViewController" id="LFT-4A-nnp" customClass="BankViewController" customModule="MLChallenge" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="0GE-FJ-yzu">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -242,17 +242,18 @@
                     </view>
                     <connections>
                         <outlet property="activityIndicator" destination="UkL-Ec-Wlf" id="vPo-fb-HIn"/>
-                        <outlet property="amountLabel" destination="ZPB-pX-pFW" id="n7s-yK-LzG"/>
-                        <outlet property="bankLabel" destination="L9A-NH-BHR" id="Yz7-pg-ETa"/>
-                        <outlet property="banksTableView" destination="BJH-14-oL6" id="HGD-Hz-wUI"/>
-                        <outlet property="okButton" destination="unG-Ym-ch2" id="ebD-he-r3c"/>
-                        <outlet property="userAmountLabel" destination="wAd-Qm-7Dj" id="2iU-8T-ng5"/>
-                        <segue destination="DRH-FH-ysx" kind="show" id="nGr-xX-eeA"/>
+                        <outlet property="amountChoosenLabel" destination="wAd-Qm-7Dj" id="lnw-L0-s0x"/>
+                        <outlet property="amountLabel" destination="ZPB-pX-pFW" id="Ghk-n8-hjM"/>
+                        <outlet property="banksTableView" destination="BJH-14-oL6" id="xLu-Rk-pWB"/>
+                        <outlet property="creditCardChoosenLabel" destination="aNA-lD-Hxe" id="0bY-Al-NYb"/>
+                        <outlet property="creditCardLabel" destination="PlJ-Ke-GE2" id="Lx1-Wv-ojw"/>
+                        <outlet property="okButton" destination="unG-Ym-ch2" id="l8f-Th-Ncj"/>
+                        <segue destination="DRH-FH-ysx" kind="show" identifier="toBankVC" id="nGr-xX-eeA"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2zE-gG-rtl" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1648.8" y="133.5832083958021"/>
+            <point key="canvasLocation" x="1724" y="179"/>
         </scene>
         <!--Dues View Controller-->
         <scene sceneID="vXN-ot-pYi">
@@ -272,7 +273,6 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="OK"/>
                                 <connections>
-                                    <action selector="okButtonPressed:" destination="md0-4W-fzY" eventType="touchUpInside" id="6lU-Tr-k1M"/>
                                     <action selector="okButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="wTl-R3-40b"/>
                                 </connections>
                             </button>
